objects/JBCXM__TransactionHeader__c.object
<CustomObject>
    <description>Transactions represent atomic financial transactions with a Customer. Header information of each transaction is stored as One Record in this object.</description>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Annual Subscription Value.</description>
        <inlineHelpText>Annual Subscription Value calculated based on the Booking and Term.</inlineHelpText>
        <label>ASV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__BookingNumber__c</fullName>
        <description>Optional Reference number from external systems.</description>
        <inlineHelpText>Optional Reference number from external systems.</inlineHelpText>
        <label>Booking Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChurnReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Churn Reason (applicable for Churn Transactions only). Churn reasons are customizable by adding records into PickList object.</description>
        <inlineHelpText>Select Churn Reason (applicable for Churn Transactions only).</inlineHelpText>
        <label>Churn Reason</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Churn Reason</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header (Churn Reason)</relationshipLabel>
        <relationshipName>TransactionHeaderChurnReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comment__c</fullName>
        <description>Enter optional commentary on the Transaction</description>
        <inlineHelpText>Enter optional commentary on the Transaction</inlineHelpText>
        <label>Comment</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerName__c</fullName>
        <description>Customer Name (auto populated)</description>
        <formula>JBCXM__Customer__r.JBCXM__CustomerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer Name (auto populated)</inlineHelpText>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Customer__c</fullName>
        <description>Reference to CustomerInfo Record</description>
        <inlineHelpText>Reference to CustomerInfo Record</inlineHelpText>
        <label>Customer</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>Transaction Header</relationshipLabel>
        <relationshipName>TransactionHeader</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <description>Transaction Date</description>
        <inlineHelpText>Transaction Date</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Monthly Recurring Revenue</description>
        <inlineHelpText>Monthly Recurring Revenue calculated based on Booking Amount and Term</inlineHelpText>
        <label>MRR</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__NextRenewalDate__c</fullName>
        <description>Next Renewal Date</description>
        <inlineHelpText>Next Renewal Date</inlineHelpText>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTimeRevenue__c</fullName>
        <description>One-time revenue</description>
        <inlineHelpText>One-time revenue</inlineHelpText>
        <label>OneTime Revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OrderType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>New Business: First business transaction&lt;br&gt;&lt;br&gt;Renewal: Renewal date auto populated &lt;br&gt;&lt;br&gt;Upsell / Downsell: Subsequent Upsell or Downsell transactions&lt;br&gt;&lt;br&gt;Debook: Any corrections to the previously booked amounts&lt;br&gt;&lt;br&gt;Churn: Churn transaction</inlineHelpText>
        <label>Order Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>Order Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header (Order Type)</relationshipLabel>
        <relationshipName>TransactionHeaderOrderType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalContract__c</fullName>
        <description>Contract Number is an optional reference used in the external systems.</description>
        <inlineHelpText>Contract Number is an optional reference used in the external systems.</inlineHelpText>
        <label>Original Contract</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecEndDate__c</fullName>
        <description>Deferred Revenue Recognition End Date</description>
        <inlineHelpText>Deferred Revenue Recognition End Date</inlineHelpText>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RevRecStartDate__c</fullName>
        <description>Deferred Revenue Recognition Start Date</description>
        <inlineHelpText>Deferred Revenue Recognition Start Date</inlineHelpText>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Representative</description>
        <inlineHelpText>Sales Representative (optional field)</inlineHelpText>
        <label>SalesRep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>JBCXM__PickList__c.JBCXM__Category__c</field>
                <operation>equals</operation>
                <value>SalesRep Name</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Transaction Header</relationshipLabel>
        <relationshipName>TransactionHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term__c</fullName>
        <description>Booking Term in Months</description>
        <inlineHelpText>Booking Term in whole Months</inlineHelpText>
        <label>Term</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <description>User licenses/count</description>
        <inlineHelpText>User licenses/count</inlineHelpText>
        <label>Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Header(Deprecated)</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>NAME</columns>
        <columns>JBCXM__BookingNumber__c</columns>
        <columns>JBCXM__OrderType__c</columns>
        <columns>JBCXM__CustomerName__c</columns>
        <columns>JBCXM__Term__c</columns>
        <columns>JBCXM__Date__c</columns>
        <columns>JBCXM__ASV__c</columns>
        <columns>JBCXM__MRR__c</columns>
        <columns>JBCXM__OneTimeRevenue__c</columns>
        <columns>JBCXM__Users__c</columns>
        <columns>JBCXM__SalesRep__c</columns>
        <columns>JBCXM__RevRecStartDate__c</columns>
        <columns>JBCXM__RevRecEndDate__c</columns>
        <columns>JBCXM__NextRenewalDate__c</columns>
        <columns>JBCXM__Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ord-{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Header(Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>